[package]
name = "sigurd-wasm"
version = "0.1.0"
authors = ["Alex Sparrow <alex@quartic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sigurd = { path = "../sigurd" }
js-sys = "0.3.40"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]
